# tryorama

./: .eslintrc.cjs  .eslintrc.js  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README-TODO.md  README.md  build-fixture.sh  build-trycp.sh  default.nix  docs: add link to run test badge  eslint.config.mjs  example.ts  experiment-tape.ts  flake.nix  package-lock.json  package.json  run-test.sh  tsconfig.build.json  tsconfig.json  vitest.config.ts
.circleci/: config.yml
.github/: nix.conf  pull_request_template.md
.github/workflows/: publish-to-npmjs.yml  test.yml
ci_scripts/: install-holochain.sh  run-test.sh
crates/trycp_api/: Cargo.toml
crates/trycp_api/src/: lib.rs
crates/trycp_client/: Cargo.toml
crates/trycp_client/examples/: start_stop.rs
crates/trycp_client/src/: lib.rs
crates/trycp_server/: Cargo.toml  TryCP Server API.md
crates/trycp_server/src/: admin_call.rs  admin_interface.rs  app_interface.rs  configure_player.rs  download_dna.rs  download_logs.rs  holochain_interface.rs  main.rs  registrar.rs  reset.rs  rpc_util.rs  save_dna.rs  shutdown.rs  startup.rs
crates/trycp_server/src/holochain_interface/: app.rs
crates/trycp_server/test/: package-lock.json  package.json  test.js
crates/trycp_server/tests/: integration.rs
doc/: README.md  book.toml
doc/src/: SUMMARY.md  overview.md
doc/src/orchestrators/: dev-orchestrator-1-verbose.md  dev-orchestrator-1.md  dev-orchestrator-2.md  net-orchestrator.md  overview.md
doc/src/scenarios/: api.md  overview.md  suites-harnesses.md  suites.md  syntax.md  types.md
doc/theme/: highlight.js
docs/: TryCP Server API.md  index.md  tryorama._trycpappapiresponse.data.md  tryorama._trycpappapiresponse.md  tryorama._trycpappapiresponse.type.md  tryorama.addallagentstoallconductors.md  tryorama.adminapiresponse.md  tryorama.adminapiresponseagentinfo.data.md  tryorama.adminapiresponseagentinfo.md  tryorama.adminapiresponseagentinfo.type.md  tryorama.adminapiresponseagentinfo.value.md  tryorama.adminapiresponseagentinfoadded.md  tryorama.adminapiresponseagentinfoadded.type.md  tryorama.adminapiresponseagentinforequested.data.md  tryorama.adminapiresponseagentinforequested.md  tryorama.adminapiresponseagentinforequested.type.md  tryorama.adminapiresponseagentkeyrevoked.data.md  tryorama.adminapiresponseagentkeyrevoked.md  tryorama.adminapiresponseagentkeyrevoked.type.md  tryorama.adminapiresponseagentkeyrevoked.value.md  tryorama.adminapiresponseagentpubkeygenerated.data.md  tryorama.adminapiresponseagentpubkeygenerated.md  tryorama.adminapiresponseagentpubkeygenerated.type.md  tryorama.adminapiresponseagentpubkeygenerated.value.md  tryorama.adminapiresponseappauthenticationtokenissued.data.md  tryorama.adminapiresponseappauthenticationtokenissued.md  tryorama.adminapiresponseappauthenticationtokenissued.type.md  tryorama.adminapiresponseappauthenticationtokenissued.value.md  tryorama.adminapiresponseappbundleinstalled.data.md  tryorama.adminapiresponseappbundleinstalled.md  tryorama.adminapiresponseappbundleinstalled.type.md  tryorama.adminapiresponseappdisabled.data.md  tryorama.adminapiresponseappdisabled.md  tryorama.adminapiresponseappdisabled.type.md  tryorama.adminapiresponseappdisabled.value.md  tryorama.adminapiresponseappenabled.data.md  tryorama.adminapiresponseappenabled.md  tryorama.adminapiresponseappenabled.type.md  tryorama.adminapiresponseappenabled.value.md  tryorama.adminapiresponseappinstalled.data.md  (+606 more)
example/: README.md  package-lock.json  package.json  test.ts
nix/: sources.json
sample/: index.ts  test-combinators.ts  test-simple.ts  test-tape-combinator.ts  test-tape-manual.ts  test-vanilla.ts
src/: actor.ts  api.ts  callbacks.ts  cell.ts  common.ts  conductor-definition.ts  conductor-external.ts  conductor-factory.ts  conductor-managed.ts  conductor.ts  config.ts  consistency.ts  diorama.ts  env.ts  executors.ts  hostedPlayer.ts  hosted_palyer.ts  index.ts  instance.ts  logger.ts  middleware.ts  orchestrator.ts  playbook.ts  player.ts  reporter.ts  scenario.ts  trycp.ts  tsconfig.json  types.ts  util.ts
src/config/: args.ts  builder.ts  combine.ts  common.ts  expand.ts  gen.ts  get-port-cautiously.ts  index.ts  logger.ts  spawn.ts
src/stress/: index.ts
test/: README.md  common.ts  fetch-dna.ts  index.ts  test-actor.ts  test-config.ts  test-diorama.ts  test-e2e.ts  test-executor.ts  test-middleware.ts  test-orchestrator.ts  test-playbook.ts  test-tape-mock.ts  test-tape-real.ts  test-tape.ts
test/2020/: README.md  package.json  test.ts
test/e2e/: .#test-dynamic-on.ts  .gitignore  index.ts  test-always-on.ts  test-dynamic-on.ts  test-e2e.ts  test-remote.ts  test-signal.ts  test-timeout.ts
test/e2e/fixture/: .gitignore  dna.yaml  happ.yaml
test/e2e/fixture/zomes/link/: Cargo.toml
test/e2e/fixture/zomes/test/: Cargo.toml
test/e2e/fixture/zomes/test/src/: lib.rs
test/e2e/link.dna.workdir/: dna.json  test_wasm_link.wasm
test/e2e/test.dna.workdir/: dna.json  test.wasm
test/rsm/: .gitignore  README.md  package-lock.json  package.json  test.ts
test/rsm/test.dna.workdir/: dna.json  test_wasm_foo.wasm
test/unit/: index.ts  test-actor.ts  test-api.ts  test-builder.ts  test-combine.ts  test-config.ts  test-expand.ts  test-gen.ts  test-middleware.ts  test-orchestrator.ts  test-player.ts  test-tape-mock.ts  test-tape-real.ts  test-util.ts
ts/src/: common.ts  conductor-helpers.ts  conductor.ts  env.ts  index.ts  local-trycp-server.ts  logger.ts  scenario.ts  trycp-client.ts  types.ts  util.ts
ts/src/local/: conductor.ts  index.ts  scenario.ts
ts/src/player/: player.ts  types.ts
ts/src/trycp/: index.ts  local-trycp-server.ts  trycp-client.ts  trycp-server.ts  types.ts  util.ts
ts/test/: conductor.test.ts  conductor.ts  constants.ts  holo-port.ts  index.ts  scenario.test.ts  scenario.ts  trycp-server-helpers.ts  trycp-server-scenario.ts  trycp-server-scenarios.ts  trycp-server.ts  trycp.ts  util.test.ts
ts/test/fixture/: dna.yaml  happ.yaml  index.ts
ts/test/fixture/zomes/integrity/: Cargo.toml
ts/test/fixture/zomes/integrity/src/: lib.rs
(+27 files in other folders)
