[workspace]
members = [
  "crates/trycp_api",
  "crates/trycp_client",
  "crates/trycp_server",
  "ts/test/fixture/zomes/coordinator",
  "ts/test/fixture/zomes/integrity",
]
resolver = "2"

[workspace.dependencies]
hdi = "0.4.1-rc.0"
hdk = "0.3.1-rc.0"
serde = "1.0.181"

[profile.dev]
opt-level = "z"
