[workspace]
members = [
  "crates/trycp_api",
  "crates/trycp_client",
  "crates/trycp_server",
  "ts/test/fixture/zomes/coordinator",
  "ts/test/fixture/zomes/integrity",
]
resolver = "2"

[workspace.dependencies]
futures = "0.3"
hdi = "0.4.1-rc.0"
hdk = "0.3.1-rc.0"
nix = { version = "0.28", features = ["signal"] }
once_cell = "1.5.0"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false }
rmp-serde = "=0.15.5"
serde = "1.0.181"
serde_bytes = "0.11"
serde_json = "1.0.117"
slab = "0.4"
snafu = "0.6"
structopt = "0.2"
tokio = "1.38"
tokio-tungstenite = "0.21"
trycp_api = { version = "0.16.0-dev.7", path = "crates/trycp_api" }
url = "2"

[profile.dev]
opt-level = "z"
