[package]
name = "trycp_client"
version = "0.16.0-dev.7"
description = "Client for TryCP"
license = "CAL-1.0"
edition = "2021"

[dependencies]
futures = { workspace = true }
rmp-serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = [ "full" ] }
tokio-tungstenite = { workspace = true }
trycp_api = { workspace = true }
