[package]
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
description = "conductor provisioner for tryorama"
documentation = "https://github.com/holochain/tryorma/crates/trycp_server"
edition = "2021"
homepage = "https://github.com/holochain/tryorama"
keywords = ["holochain", "holo", "p2p", "network", "simulation"]
license = "CAL-1.0"
name = "trycp_server"
repository = "https://github.com/holochain/tryorma"
version = "0.0.100-alpha0"

[dependencies]
futures = "0.3.14"
nix = "0.20.2"
once_cell = "1.5.0"
parking_lot = "0.10.0"
reqwest = {version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls-native-roots"]}
rmp-serde = "1.1.1"
serde = {version = "1.0.104", features = ["derive"]}
serde_bytes = "0.11.0"
slab = "0.4.0"
snafu = "0.6.10"
structopt = "0.2.18"
structopt-derive = "0.2.18"
tokio = {version = "1.24.2", features = ["macros", "rt-multi-thread", "process", "fs"]}
tokio-tungstenite = "0.14.0"
url = "2.1.0"
