[package]
name = "trycp_server"
version = "0.0.100-alpha0"
description = "conductor provisioner for tryorama"
license = "CAL-1.0"
keywords = ["holochain", "holo", "p2p", "network", "simulation"]
homepage = "https://github.com/holochain/tryorama"
documentation = "https://github.com/holochain/tryorma/crates/trycp_server"
repository = "https://github.com/holochain/tryorma"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
edition = "2021"

[dependencies]
futures = "0.3"
nix = { version = "0.28", features = ["signal"] }
once_cell = "1.5.0"
parking_lot = "0.12"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls-native-roots"] }
rmp-serde = "=0.15.5"
serde = { version = "1.0.181", features = ["derive"] }
serde_bytes = "0.11"
slab = "0.4"
snafu = "0.6"
structopt = "0.2"
tokio = { version = "1.24", features = ["macros", "rt-multi-thread", "process", "fs"]}
tokio-tungstenite = "0.14"
url = "2"
