[package]
name = "trycp_server"
version = "0.18.0-dev.0"
description = "conductor provisioner for tryorama"
license = "CAL-1.0"
keywords = ["holochain", "holo", "p2p", "network", "simulation"]
homepage = "https://github.com/holochain/tryorama"
documentation = "https://github.com/holochain/tryorma/crates/trycp_server"
repository = "https://github.com/holochain/tryorma"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2021"

[dependencies]
futures = { workspace = true }
nix = { workspace = true, features = ["signal"] }
once_cell = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true, default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls-native-roots",
] }
rmp-serde = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
slab = { workspace = true }
snafu = { workspace = true }
structopt = { workspace = true }
tokio = { workspace = true, features = [
  "macros",
  "rt-multi-thread",
  "process",
  "fs",
] }
tokio-tungstenite = { workspace = true }
trycp_api = { workspace = true }
url = { workspace = true }

[dev-dependencies]
holochain_conductor_api = "0.4.0-rc.0"
rand = "0.8"
serde_yaml = "0.9"
trycp_client = { path = "../trycp_client" }
