[package]
name = "test_wasm"
version = "0.0.1"
authors = [ "thedavidmeister", "thedavidmeister@gmail.com" ]
edition = "2018"

[lib]
name = "test_wasm"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
hdk = {git ="https://github.com/holochain/holochain", rev = "f3d17d993ad8d988402cc01d73a0095484efbabb", package = "hdk"}
serde = "1.0.123"
