[package]
name = "test_wasm"
version = "0.0.1"
authors = [ "thedavidmeister", "thedavidmeister@gmail.com" ]
edition = "2018"

[lib]
name = "test_wasm"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
hdk = {git ="https://github.com/holochain/holochain", rev = "092df23697b7fdd53f901ec4c3a8579c280bae3f", package = "hdk"}
serde = "1.0.123"
