[package]
name = "test_wasm"
version = "0.0.1"
authors = [ "thedavidmeister", "thedavidmeister@gmail.com" ]
edition = "2018"

[lib]
name = "test_wasm"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
hdk = {git ="https://github.com/holochain/holochain", rev = "ab02f36c87999d42026b7429164ded503bb39853", package = "hdk"}
serde = "1.0.123"
