[package]
edition = "2021"
name = "integrity"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "integrity"

[dependencies]
chrono = { version = "0.4", default-features = false }
getrandom = { version = "0.3" }
hdi = { workspace = true }
holochain_serialized_bytes = { workspace = true }
serde = { workspace = true }
